--- a/text_recognizer/src/main/res/values-ky/strings.xml
+++ b/text_recognizer/src/main/res/values-ky/strings.xml
@@ -5,7 +5,7 @@
     <string name="yes_they_visible">Ооба, көрүндү</string>
     <string name="no_reshoot">Жок, кайра тартуу керек</string>
     <string name="capture_confirmation_text">Маалыматтар так көрүнүп жатабы?</string>
-    <string name="title_photo_capture">Паспорттун арткы бетинин\nсүрөтү</string>
-    <string name="desc_photo_capture">Паспортту алкактын ичине келтириңиз,\nсканерлөө автоматтык түрдө\nжүргүзүлөт</string>
+    <string name="text_recognizer_title_photo_capture">Паспорттун арткы бетинин\nсүрөтү</string>
+    <string name="text_recognizer_desc_photo_capture">Паспортту алкактын ичине келтириңиз,\nсканерлөө автоматтык түрдө\nжүргүзүлөт</string>
 
 </resources>
