--- a/text_recognizer/src/main/res/values-en/strings.xml
+++ b/text_recognizer/src/main/res/values-en/strings.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="recognition_description_without_button">Make sure the information is visible within the frame. Wait for the information to be processed.</string>
-    <string name="recognition_description">Поместите паспорт в рамку \n и нажмите на кнопку «сфотографировать»</string>
+    <string name="recognition_description">Put the passport into the frame and press the Photo button</string>
     <string name="yes_they_visible">Yes, its visible</string>
     <string name="no_reshoot">No, retake</string>
-    <string name="check_passport">Проверьте паспорт</string>
     <string name="capture_confirmation_text">Is the data clearly visible?</string>
     <string name="text_recognizer_title_photo_capture">Passport back photo</string>
 
