--- a/text_recognizer/src/main/res/values-ky/strings.xml
+++ b/text_recognizer/src/main/res/values-ky/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="recognition_description_without_button">Маалыматтар алкактын чегинде көрүнүп турганына ынаныңыз. Маалыматтардын окулушун күтүңүз.</string>
-    <string name="recognition_description">Паспортту алкактын ичине келтирип, «Сүрөткө тартуу» баскычын басыңыз</string>
+    <string name="recognition_description">Поместите паспорт в рамку \n и нажмите на кнопку «сфотографировать»</string>
     <string name="yes_they_visible">Ооба, көрүндү</string>
     <string name="no_reshoot">Жок, кайра тартуу керек</string>
+    <string name="check_passport">Проверьте паспорт</string>
     <string name="capture_confirmation_text">Маалыматтар так көрүнүп жатабы?</string>
     <string name="text_recognizer_title_photo_capture">Паспорттун арткы бетинин\nсүрөтү</string>
 
