--- a/text_recognizer/src/main/res/values/strings.xml
+++ b/text_recognizer/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="recognition_description">Поместите паспорт в рамку \n и нажмите на кнопку «сфотографировать»</string>
     <string name="yes_they_visible">Да, видны</string>
     <string name="no_reshoot">Нет, переснять</string>
+    <string name="check_passport">Проверьте паспорт</string>
     <string name="capture_confirmation_text">Данные отчетливо видны?</string>
     <string name="text_recognizer_title_photo_capture">Фото с оборотной стороны\nпаспорта</string>
 </resources>
